
ADD_SUBDIRECTORY(hello_triangle)
# ADD_SUBDIRECTORY(mip_map_2d)
# ADD_SUBDIRECTORY(multi_texture)
# ADD_SUBDIRECTORY(multi_window)
# ADD_SUBDIRECTORY(multiple_draw_buffers)
# ADD_SUBDIRECTORY(particle_system)
# ADD_SUBDIRECTORY(post_sub_buffer)
# ADD_SUBDIRECTORY(sample_util)
# ADD_SUBDIRECTORY(shader_translator)
# ADD_SUBDIRECTORY(simple_instancing)
# ADD_SUBDIRECTORY(simple_texture_2d)
# ADD_SUBDIRECTORY(simple_texture_cubemap)
# ADD_SUBDIRECTORY(simple_vertex_shader)
# ADD_SUBDIRECTORY(stencil_operations)
# ADD_SUBDIRECTORY(tex_redef_microbench)
# ADD_SUBDIRECTORY(texture_wrap)
# ADD_SUBDIRECTORY(tri_fan_microbench)
# ADD_SUBDIRECTORY(WindowTest)
