SET(ANGLE_SETUP_TARGET_NAME simple_vertex_shader)

SET(ANGLE_SETUP_HEADERS
)

SET(ANGLE_SETUP_SOURCES
    ${PROJECT_SOURCE_DIR}/samples/sample_util/SampleApplication.cpp
    # ${PROJECT_SOURCE_DIR}/util/shader_utils.cpp
    
    SimpleVertexShader.cpp
)

INCLUDE_DIRECTORIES(AFTER ${PROJECT_SOURCE_DIR}/include/ )
INCLUDE_DIRECTORIES(AFTER ${PROJECT_SOURCE_DIR}/samples/sample_util/ )
INCLUDE_DIRECTORIES(AFTER ${PROJECT_SOURCE_DIR}/util/ )
INCLUDE_DIRECTORIES(AFTER ${PROJECT_SOURCE_DIR}/src/ )
# INCLUDE_DIRECTORIES(AFTER ${PROJECT_SOURCE_DIR})
# INCLUDE_DIRECTORIES(AFTER ${_3RDPARTY_INCLUDE_DIR})

add_definitions(-DGL_GLEXT_PROTOTYPES)

# LINK_DIRECTORIES(${PROJECT_BINARY_DIR}/lib)
# IF(MALI_FOUND)
# LINK_DIRECTORIES( ${MALI_LIBRARY_DIR})
# ENDIF()

ANGLE_SETUP_EXECUTABLE(ON)
TARGET_LINK_LIBRARIES( ${ANGLE_SETUP_TARGET_NAME} libEGL libGLESv2 libANGLE_util)
ANGLE_SETUP_INSTALL()
# ANGLE_SETUP_DOCUMENT()

