
SET(ANGLE_SETUP_TARGET_NAME libEGL)

# SET(HEADER_PATH ${PROJECT_SOURCE_DIR}/include/${ANGLE_SETUP_TARGET_NAME})

SET(ANGLE_SETUP_HEADERS
    # ${HEADER_PATH}/Export.h
)

SET(ANGLE_SETUP_SOURCES
    libEGL.def
    libEGL.cpp
)

add_definitions(-DEGLAPI="")

INCLUDE_DIRECTORIES(AFTER ${PROJECT_SOURCE_DIR}/src )
INCLUDE_DIRECTORIES(AFTER ${PROJECT_SOURCE_DIR}/src/common/third_party/base )

ANGLE_SETUP_DYNAMIC_LIBRARY(ON)
TARGET_LINK_LIBRARIES( ${ANGLE_SETUP_TARGET_NAME} libGLESv2 )
ANGLE_SETUP_INSTALL()
ANGLE_SETUP_INSTALL_INCLUDE()
